# FaceGuard

./: .dockerignore  .gitignore  Dockerfile  FaceGuard_API.postman_collection.json  README.Docker.md  README.md  Thermal_Biometric_API.postman_collection.json  docker-compose.dev.yml  docker-compose.yml  requirements.txt
doc/: ENROLLMENT.md
results/: README.md
src/: antispoofing_config.json  antispoofing_config.json.backup  antispoofing_detector.py  antispoofing_feedback.py  api.py  app.py  config.py  evaluate_metrics.py  identification.py  initialize_gallery.py  pyproject.toml  sample_utils.py  verification.py
src/antispoofing/: __init__.py
src/antispoofing/detectors/: __init__.py  color_distribution.py  eye_blinks.py  more_patterns.py  motion_patterns.py  textures.py
src/antispoofing/utils/: compute_lpb.py
src/results/: metrics_report.json
src/static/: FRONTEND_README.md  app.js  index.html  styles.css
