[project]
name = "src"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "cryptography>=46.0.3",
    "facenet-pytorch>=2.5.3",
    "fastapi>=0.128.0",
    "matplotlib>=3.10.8",
    "mtcnn>=1.0.0",
    "onnxruntime>=1.23.2",
    "opencv-python>=4.12.0.88",
    "pandas>=2.3.3",
    "pillow>=12.1.0",
    "pydantic>=2.12.5",
    "python-multipart>=0.0.21",
    "scikit-learn>=1.8.0",
    "scipy>=1.17.0",
    "tensorflow>=2.20.0",
    "torch>=2.9.1",
    "torchvision>=0.24.1",
    "tqdm>=4.67.1",
    "uvicorn>=0.40.0",
]
